added new paragraph

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>This is my new website!!</h1>
+	<p>This is our new site which is under development </p>
+
 </body>
 </html>
