--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>This is my new website!!</h1>
 	<p>This is our new site which is under development </p>
+	<h2>This is another heading</h2>
 </body>
 </html>
